<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="logo_description">Logo de elorclass</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="remember_pass">Recordar mi contraseña</string>
    <string name="registrate">Regístrate</string>
    <string name="continuar">Continuar</string>
    <string name="userIcon">Icono del usuario</string>
    <string name="pass_icon">Icono de contraseña</string>
    <string name="personal_info">Datos personales</string>
    <string name="userName">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="second_surname">Segundo apellido</string>
    <string name="dni">DNI</string>
    <string name="direction">Dirección</string>
    <string name="telephone1">Teléfono 1</string>
    <string name="telephone2">Teléfono 2(Opciona)</string>
    <string name="formative_info">Informacion formativa</string>
    <string name="course_name">Nombre del curso</string>
    <string name="cycle_name">Nombre del ciclo</string>
    <string name="dual_intensive">Dual intensiva</string>
    <string name="password">Contraseña</string>
    <string name="insert_password">Introduce tu contraseña</string>
    <string name="repeatPassword">Repite tu contraseña</string>
    <string name="add_photo">Añade una foto</string>
    <string name="back">Volver</string>
    <string name="app_name">ElorClass</string>
    <string name="profile">Perfil</string>
    <string name="home">Inicio</string>
    <string name="settings">Ajustes</string>
    <string name="reunions">Reuniones</string>
    <string name="ProfessorMainPanelTitle">Control del aula</string>
    <string name="studentSchedule">Horario del estudiante</string>
    <string name="download">Descargar</string>
    <string name="downloadDocuments">Descarga de documentos</string>
    <string name="filter">Filtrar</string>
    <string name="external_courses">Cursos externos</string>
    <string name="externalCourses">Cursos externos</string>
    <string name="languageSettingsTitle">Cambiar idioma</string>
    <string-array name="country_arrays">
        <item>Español</item>
        <item>English</item>
        <item>Euskera</item>
    </string-array>
    <string-array name="theme_arrays">
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>
    <string-array name="filter_arrays">
        <item>Por Curso</item>
        <item>Por Ciclo</item>
        <item>Por Asignatura</item>
    </string-array>
    <string name="insert_old_password">Introduce tu antigua contraseña</string>
    <string name="insert_new_password">Introduce tu nueva contraseña</string>
    <string name="repeat_new_password">Repite tu nueva contraseña</string>
    <string name="themeSettingsTitle">Cambiar tema</string>
    <string name="forgotPassword">He olvidado mi contraseña</string>

    <string name="weektextview">weekTextView</string>
    <string name="t_tulo_de_la_tarjeta">Título de la tarjeta</string>
    <string name="descripci_n_de_la_tarjeta">Descripción de la tarjeta</string>
    <string name="todo">TODO</string>
    <string name="DayOfWeekAndNumerOfTheWeek">Nombre Dia: Numero dia:</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="forcedAccept">Reunion forzosa</string>
    <string name="createReunion">Crea una reunion</string>
    <string name="theme">Tema</string>
    <string name="reason">Asunto</string>
    <string name="dateAndHour">Fecha y hora</string>
    <string name="classString">Aula</string>
    <string name="professors">Profesores</string>
    <string name="add_theme">Añade un tema…</string>
    <string name="add_reason">Añade un asunto…</string>
    <string name="add_date">Añade una fecha…</string>
    <string name="add_hour">Hora</string>
    <string name="add_class">Añade una clase…</string>
</resources>