<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:background="@drawable/blue_rounded_rect"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/contraseña"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textColorHint="@color/mid_blue"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordIcon"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/pass_icon"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/passwordTxt"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@drawable/lock_solid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="184dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="544dp" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="261dp"
        android:layout_height="256dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@mipmap/elorclass_foreground"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="254dp"
        android:layout_height="54dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/iniciar_sesion"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/userNameTxt"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:background="@drawable/blue_rounded_rect"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/mid_blue"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/userIcon"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/userIcon"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/userNameTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/user_solid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="339dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="444dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="614dp" />

    <CheckBox
        android:id="@+id/rememberMeCheck"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/remember_pass"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/registerTextButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/registerTextButton"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/registrate"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rememberMeCheck"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="211dp"
        android:layout_height="69dp"
        android:fontFamily="@font/alata"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_Blue"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.504" />

</androidx.constraintlayout.widget.ConstraintLayout>